HREPTWO-3819: Search styling broken in Internet Explorer https://issues.onehippo.com/browse/HREPTWO-3819
- moved from sibling td's to a horizontal ul-li
- gave li items 42% width in IE to force them on one line

svn path=/hippo-ecm/trunk/; revision=21937

--- a/repository/package/skin/src/main/webapp/screen_ie.css
+++ b/repository/package/skin/src/main/webapp/screen_ie.css
@@ -25,3 +25,7 @@ table.toolbarRow {
 .column-wrapper {width: 99%; overflow: hidden;}
 
 .yui-resize .yui-resize-handle-r { width: 10px; }
+
+.hippo-search-scope-container-ul li {
+  width: 42%;
+}
